flux-config/apps/staging/eshop-mvc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eshop-mvc-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: eshop-staging.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /mvc
        pathType: Prefix
        backend:
          service:
            name: eshop-mvc-svc
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eshop-mvc-svc
            port:
              number: 80
  - http:
      paths:
      - path: /mvc
        pathType: Prefix
        backend:
          service:
            name: eshop-mvc-svc
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eshop-mvc-svc
            port:
              number: 80
